--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,3 +18,4 @@ alpha-vantage==2.3.1
 # while maintaining API compatibility with existing code (getattr, fetch_ohlcv, etc.)
 ccxt>=4.4.0,<5.0.0
 requests==2.31.0
+openpyxl==3.1.2
